[package]
name = "credible-coin"
version = "0.1.0"
edition = "2021"
description = "A zero-knowledge proof system to asses cryptocurrency exchange solvency."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 =  {version = "0.27.0", features = ["rand"]}
rand = "0.8.5"
bitcoin = { version = "0.30.0", features = ["rand"]}
rs_merkle = "1.3.0"
clap = { version = "4.1.13", features = ["derive"] }
eyre = "0.6.8"
bincode = "1.3.3"
serde = "1.0.159"
reedline = "0.17.0"
pretty_env_logger = "0.4.0"
log = "0.4.17"
csv = "1.2.1"
indexmap = "1.9.3"
rand_chacha = "0.3.1"
comfy-table = "6.1.4"
[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "csv"
harness = false
[[bench]]
name = "merkle_bench"
harness = false

[profile.release]
debug = true
