[package]
name = "credible-coin"
version = "0.1.0"
edition = "2021"
description = "A zero-knowledge proof system to asses cryptocurrency exchange solvency."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 =  {version = "0.27.0", features = ["rand"]}
rand = "0.8.5"
bitcoin = { version = "0.30.0", features = ["rand"]}
rs_merkle = "1.3.0"
clap = { version = "4.1.13", features = ["derive"]}
eyre = "0.6.8"
bincode = "1.3.3"
serde = "1.0.159"
reedline = "0.20.0"
flexi_logger = {version="0.25.4", features=["async"]}
nu-ansi-term = "0.47.0"
log = "0.4.17"
csv = "1.2.1"
indexmap = "1.9.3"
rand_chacha = "0.3.1"
comfy-table = "7.0.0"
redis = "0.23.0"
num-traits = "0.2.15"
rayon = "1.7.0"
[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "csv"
harness = false
[[bench]]
name = "merkle_bench"
harness = false
[[bench]]
name = "address"
harness = false
[profile.release]
debug = true
