[package]
name = "credible-coin"
version = "0.1.0"
edition = "2021"
description = "A zero-knowledge proof system to asses cryptocurrency exchange solvency."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = { version = "0.28.0", features = ["rand"] }
rand = "0.8.5"
bitcoin = { version = "0.31.0", features = ["rand"] }
rs_merkle = "1.3.0"
clap = { version = "4.1.13", features = ["derive"] }
anyhow = "1.0.71"
thiserror = "1.0"
bincode = "1.3.3"
serde = "1.0.159"
reedline = "0.25.0"
flexi_logger = { version = "0.27.2", features = ["async"] }
nu-ansi-term = "0.49.0"
log = "0.4.17"
csv = "1.2.1"
indexmap = "2.0.0"
rand_chacha = "0.3.1"
comfy-table = "7.0.0"
redis = "0.23.0"
num-traits = "0.2.15"
rayon = "1.7.0"
config = "0.13.3"
bat = "0.23.0"
num_cpus = "1.16.0"
[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "csv"
harness = false
[[bench]]
name = "merkle_bench"
harness = false
[[bench]]
name = "address"
harness = false
[[bench]]
name = "db_benches"
harness = false
[profile.release]
debug = true
